@@ -1,6 +1,9 @@
 New in spot 2.9.5.dev (not yet released)
 
-  Nothing yet.
+  Bugs fixed:
+
+  - twa_graph::merge_edges() could fail to merge two transitions if the
+    destination transition was the first of the automaton.  (Issue #441)
 
 New in spot 2.9.5 (2020-11-19)
 
